# OpenGL_Praktikum

./: CMakeLists.txt
assets/shaders/: vertex.glsl
framework/: CommonTypes.h  Input.cpp  OBJLoader.cpp  OBJLoader.h  OpenGLWindow.cpp  OpenGLWindow.h  fw_config.h  libheaders.h
libs/: CMakeLists.txt
libs/glew-2.1.0/: glew.pc
libs/glfw-3.2.1/docs/html/: quick_guide.html
libs/glm-master/glm/gtx/: quaternion.inl
libs/stb/: CMakeLists.txt
src/: main.cpp
src/Framework/Assets/: AssetManager.cpp  AssetManager.h  ShaderProgram.cpp  ShaderProgram.h
src/Framework/Rendering/: Primitives.cpp  Primitives.h
src/Framework/SceneElements/: Transform.cpp  Transform.h
src/Game/: Lee.h  Scene.cpp  Scene.h  Window.cpp  Window.h  cube.h  haus.h
